server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safebreath-backend-svc
  namespace: safebreath-prod
  labels:
    app: safebreath-backend
spec:
  type: ClusterIP
  selector:
    app: safebreath-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
