server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: safebreath-ingress
  namespace: safebreath-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # WebSockets Configuration
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "safebreath-backend-svc"
    # Enable TLS Termination
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.safebreath.dev
      secretName: safebreath-tls-secret
  rules:
    - host: api.safebreath.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: safebreath-backend-svc
                port:
                  number: 80
